--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Recat-redux vote app",
   "main": "index.jsx",
   "scripts": {
-    "start": "webpack-dev-server",
+    "backend": "nodemon server.js",
+    "frontend": "webpack-dev-server",
+    "start": "npm-run-all --parallel frontend backend",
     "build": "webpack"
   },
   "author": "eagleweb",
@@ -31,10 +33,18 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "body-parser": "^1.18.3",
+    "cors": "^2.8.4",
     "css-loader": "^0.28.11",
+    "express": "^4.16.3",
     "file-loader": "^1.1.11",
+    "helmet": "^3.13.0",
     "html-webpack-plugin": "^3.2.0",
+    "mongoose": "^5.3.0",
+    "morgan": "^1.9.1",
     "node-sass": "^4.9.3",
+    "npm-run-all": "^4.1.3",
+    "path": "^0.12.7",
     "postcss-loader": "^3.0.0",
     "precss": "^3.1.2",
     "react-hot-loader": "^4.0.1",
