--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "eagleweb",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
     "jquery": "^3.3.1",
     "npm": "^5.8.0",
