--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "backend": "nodemon server.js",
     "frontend": "webpack-dev-server",
-    "start": "npm-run-all --parallel frontend backend",
+    "dev": "npm-run-all --parallel frontend backend",
     "build": "webpack"
   },
   "author": "eagleweb",
